# rich-illuminations

./: .gitignore  .gitmodules  LICENSE  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: gh-pages.yml  python-package.yml  ruff-format.yml
docs/: index.md
docs/api/: bullet.md  horizon.md  sparkline.md  winloss.md
src/rich_illuminations/: __init__.py  __main__.py  _bar.py  _bullet.py  _horizon.py  _sparkline.py  _stack.py  _winloss.py  bullet.py  horizon.py  sparkline.py  winloss.py
tests/: test_bullet.py  test_horizon.py  test_package.py  test_sparkline.py  test_winloss.py
tests/utilities/: render.py
